--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rock, Paper, Scissors</title>
     <script src="Rock-Paper-Scissors.js"></script>
-    <link href="styles.css" style="stylesheet">
+    <link href="styles.css" rel="stylesheet";>
 </head>
 <body>
     
 </body>
-</html>
+</html> ;
