--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <link href="styles.css" style="stylesheet">
 </head>
 <body>
-    
+    <section>
+        <div class="button choice-button">
+            Rock, Paper, and Scissors buttons go here.
+        </div>
+        <div class="message-Container">
+            You chose __, Computer chose __. Result & Descriptor Sentence.
+        </div>
+        <div class="score-UI">
+            UserName Score: num Computer Score: num
+            <button class="button">Play Again</button>
+        </div>
+
+    </section>
 </body>
 </html>
